Reorganized, Optimized, & Did some Expiramenting
- Made adjustments to general file structure and organization for ease of development
- Change the way some methods need to be handled
- Added basic performance indicators

Looking forward:
- Change the way the simdata is organized to minimize redundant incorporations of data
- Improve means by which various animation solutions can be implemented.
- Detach calculation runtime from animation runtime in order to produce faster simulations
- Incorporate multiprocessing for running multiple simulations simultaneously.
- Make calculations for useful values in calculation methods versus in the 'animate' callback

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch Main",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}\\main.py",
+            "program": "${workspaceFolder}\\simulation_test.py",
             "console": "integratedTerminal",
             "justMyCode": true
         }
